tested and now try processing model

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "37d130c1-6441-45c9-af90-313b762a4f7c",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,14 @@
     "from ultralytics import YOLO\n",
     "import cv2\n",
     "import numpy as np\n",
-    "import time"
+    "import time\n",
+    "\n",
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8ed7eb16-bf34-4dfc-8a01-35da48cc381a",
    "metadata": {},
    "outputs": [],
@@ -27,20 +29,32 @@
     "    def read_participants(self,classesFilePath):\n",
     "        # Opening JSON file\n",
     "        f = open(classesFilePath)\n",
-    "\n",
+    "        \n",
+    "        \n",
+    "        self.number_to_name = {}\n",
     "        # returns JSON object as \n",
     "        # a dictionary\n",
     "        self.participants = json.load(f)\n",
-    "\n",
+    "        for i in self.participants:\n",
+    "            self.number_to_name[i[\"race_rider_bib_number\"]] = i[\"rider\"][\"first_name\"] + \" \"+ i[\"rider\"][\"last_name\"]\n",
     "        # Closing file\n",
     "        f.close()\n",
     "        \n",
-    "        print(self.participants[1])\n",
-    "    def detect_numbers(self,image, model_path = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_detection/number_detection_10epochs.pt\"):\n",
+    "    def load_detection_model(self, model_path = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_detection/number_detection_10epochs.pt\"):\n",
+    "        device = torch.device(\"cuda\")\n",
+    "        self.detection_model = YOLO(model_path)\n",
+    "        self.detection_model.to(device)\n",
     "        \n",
-    "        model = YOLO(model_path)\n",
-    "        results = model(image)\n",
+    "    def load_recognition_model(self, model_path = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_recognition/number_recognition_10epochs.pt\"):\n",
+    "        device = torch.device(\"cuda\")\n",
+    "        self.recognition_model = YOLO(model_path)\n",
+    "        self.recognition_model.to(device)\n",
+    "        \n",
+    "    def detect_numbers(self,image):\n",
+    "        \n",
+    "        results = self.detection_model(image,verbose=False)\n",
     "        return results\n",
+    "    \n",
     "    def add_bb(self, image, boxes):\n",
     "        ret_image = np.copy(image)\n",
     "        for i in boxes:\n",
@@ -57,19 +71,21 @@
     "        bottom = int(box[3].item())\n",
     "        cropped_image = image_copy[ top:bottom, left:right] # Slicing to crop the image\n",
     "        return cropped_image\n",
+    "    \n",
     "    def deinterlace_image(self, image):\n",
     "        ret_image = np.copy(image)\n",
     "        for i in range(len(ret_image)//2):\n",
     "            ret_image[2*i+1] = ret_image[2*i]\n",
     "        return ret_image\n",
-    "    def recognise_numbers(self, image, bboxes, model_path = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_recognition/number_recognition_10epochs.pt\"):\n",
+    "    \n",
+    "    def recognise_numbers(self, image, bboxes):\n",
     "        cropped_images = []\n",
     "        for i in range(len(bboxes)):\n",
     "            cropped_image = self.crop_image(image, bboxes[i])\n",
     "            deinterlaced_image = self.deinterlace_image(cropped_image)\n",
     "            cropped_images.append(deinterlaced_image)\n",
-    "        model = YOLO(model_path)\n",
-    "        results = model(cropped_images)\n",
+    "        \n",
+    "        results = self.recognition_model(cropped_images, verbose=False)\n",
     "        detected_numbers = []\n",
     "        for i in range(len(results)):\n",
     "            result = results[i].boxes\n",
@@ -103,51 +119,49 @@
     "        return annotated_image\n",
     "                \n",
     "        \n",
-    "    def predict_image(self,image, detection_path = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_detection/number_detection_10epochs.pt\", recognition_path = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_recognition/number_recognition_10epochs.pt\"):\n",
-    "        results = self.detect_numbers(image, detection_path)\n",
+    "    def predict_image(self,image):\n",
+    "        results = self.detect_numbers(image)\n",
     "        boxes = results[0].boxes.xyxy\n",
     "        if len(boxes) != 0:\n",
     "            boxed_image = self.add_bb(image, boxes)\n",
-    "            detected_numbers = self.recognise_numbers(image,boxes, recognition_path)\n",
-    "            print(detected_numbers)\n",
+    "            detected_numbers = self.recognise_numbers(image,boxes)\n",
+    "            # print(detected_numbers)\n",
     "            annotated_image = self.annotate_image(image, boxes, detected_numbers)\n",
     "            return annotated_image\n",
     "        else:\n",
     "            return image\n",
     "    \n",
-    "    def process_image(self,imagePath, detection_path = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_detection/number_detection_10epochs.pt\", recognition_path = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_recognition/number_recognition_10epochs.pt\"):\n",
+    "    def process_image(self,imagePath):\n",
     "        image = cv2.imread(imagePath)\n",
-    "        annotated_image = self.predict_image(image, detection_path, recognition_path)\n",
-    "        cv2.imshow(\"result\", annotated_image)\n",
-    "        cv2.waitKey(0)\n",
-    "        cv2.destroyAllWindows()\n",
+    "        annotated_image = self.predict_image(image)\n",
+    "        # cv2.imshow(\"result\", annotated_image)\n",
+    "        # cv2.waitKey(0)\n",
+    "        # cv2.destroyAllWindows()\n",
     "        return annotated_image\n",
     "    \n",
-    "    def process_video(self,videoPath,startpoint = 0 ,detection_path = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_detection/number_detection_10epochs.pt\", recognition_path = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_recognition/number_recognition_10epochs.pt\"):\n",
+    "    def process_video(self,videoPath,outputfile,startpoint = 0):\n",
     "        cap = cv2.VideoCapture(videoPath)\n",
     "        cap.set(cv2.CAP_PROP_POS_FRAMES, startpoint)\n",
     "        # Check if the video capture was successful\n",
     "        if not cap.isOpened():\n",
     "            print(\"Error: Could not open the video file.\")\n",
     "            exit()\n",
-    "        ret, frame = cap.read()\n",
     "        frame_width = int(frame.shape[1]) \n",
-    "        print(frame.shape)\n",
     "        frame_height = int(frame.shape[0])\n",
     "        size = (frame_width, frame_height)\n",
-    "        result = cv2.VideoWriter(\"data/result_cut_rvv_1.mp4\",  cv2.VideoWriter_fourcc(*'MJPG'), 25, size) \n",
+    "        #result = cv2.VideoWriter(outputfile,  cv2.VideoWriter_fourcc(*'MJPG'), 25, size) \n",
     "        # used to record the time when we processed last frame \n",
-    "        prev_frame_time = 0\n",
+    "        prev_frame_time = time.time() \n",
     "          \n",
     "        # used to record the time at which we processed current frame \n",
     "        new_frame_time = 0\n",
     "        while True:\n",
     "            ret, frame = cap.read()\n",
-    "            processed_frame = self.predict_image(frame,detection_path, recognition_path )\n",
+    "            print(frame)\n",
+    "            processed_frame = self.predict_image(frame)\n",
     "            # font which we will be using to display FPS \n",
     "            font = cv2.FONT_HERSHEY_SIMPLEX \n",
     "            # time when we finish processing for this frame \n",
-    "            new_frame_time = time.time() \n",
     "            new_frame_time = time.time() \n",
     "          \n",
     "            # Calculating the fps \n",
@@ -166,13 +180,17 @@
     "            fps = str(fps) \n",
     "          \n",
     "            # putting the FPS count on the frame \n",
-    "            cv2.putText(frame, fps, (7, 70), font, 3, (100, 255, 0), 3, cv2.LINE_AA) \n",
-    "            result.write(frame)\n",
+    "            cv2.putText(processed_frame, fps, (7, 70), font, 3, (100, 255, 0), 3, cv2.LINE_AA) \n",
+    "            plt.imshow(processed_frame)\n",
+    "            plt.show()\n",
+    "            break\n",
+    "            #result.write(processed_frame)\n",
     "            #cv2.imshow('frame', processed_frame)\n",
+    "            \n",
     "            #if cv2.waitKey(1) == ord('q'):\n",
-    "                #break\n",
+    "             #   break\n",
     "        cap.release()\n",
-    "        result.release()\n",
+    "        #result.release()\n",
     "        #cv2.destroyAllWindows()"
    ]
   },
@@ -17143,16 +17161,23 @@
     }
    ],
    "source": [
-    "#video = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/data/moto_rvv_men_1_s7/Ronde van vlaanderen_MEN.ts_s7.ts\"\n",
+    "\n",
+    "#image = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/data/wva_foto.png\"\n",
+    "#image = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_detection/data/images/e1948ebd-759b-11ee-bced-fcb3bc5cd112.jpg\"\n",
+    "#image = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_detection/data/images/d2293da5-759a-11ee-b39f-fcb3bc5cd112.jpg\"\n",
+    "#image = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/number_detection/data/images/d7a17471-759a-11ee-b7c3-fcb3bc5cd112.jpg\"\n",
+    "#video = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/implementatie/mt23/data/cut_rvv_1.mp4\"\n",
     "video = \"data/cut_rvv_1.mp4\"\n",
     "#participant_file = \"C:/Users/Eigenaar/Documents/school_Quinten/unief_2023_2024/Masterthesis/data/RVV23participants.json\"\n",
     "detection_path = \"number_detection/runs/detect/train6/weights/best.pt\" \n",
-    "recognition_path = \"number_recognition/runs/detect/train4/weights/best.pt\" \n",
-    "\n",
+    "recognition_path = \"number_recognition/runs/detect/train4/weights/best.pt\"\n",
+    "outputfile = \"data/new_results_cut_rvv_1.mp4\"\n",
     "\n",
     "recogniser = Back_number_recogniser()\n",
-    "#recogniser.read_participants(participant_file)\n",
-    "recogniser.process_video(video,0,detection_path, recognition_path)"
+    "recogniser.read_participants(participant_file)\n",
+    "\"\"\"recogniser.load_detection_model(detection_path)\n",
+    "recogniser.load_recognition_model(recognizer_path)\n",
+    "recogniser.process_video(video,outputfile)\"\"\"\n"
    ]
   },
   {
@@ -17180,7 +17205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
