--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 93,
    "id": "37d130c1-6441-45c9-af90-313b762a4f7c",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'conda install -c conda-forge opencv'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 94,
    "id": "94163b48-74c8-4db1-842e-e7abf45670a0",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 107,
    "id": "8ed7eb16-bf34-4dfc-8a01-35da48cc381a",
    "metadata": {},
    "outputs": [],
@@ -167,16 +167,16 @@
     "            predicted_digits = []\n",
     "            average_x = []\n",
     "            digits_to_discard = []\n",
-    "            for i in range(len(result.cls)):\n",
-    "                for j in range(i+1, len(result.cls)):\n",
-    "                    box1 = (result.xyxy[i][0].item(), result.xyxy[i][1].item(), result.xyxy[i][2].item(), result.xyxy[i][3].item())\n",
+    "            for l in range(len(result.cls)):\n",
+    "                for j in range(l+1, len(result.cls)):\n",
+    "                    box1 = (result.xyxy[l][0].item(), result.xyxy[l][1].item(), result.xyxy[l][2].item(), result.xyxy[l][3].item())\n",
     "                    box2 = (result.xyxy[j][0].item(), result.xyxy[j][1].item(), result.xyxy[j][2].item(), result.xyxy[j][3].item())\n",
     "                    iou = calculate_iou(box1, box2)\n",
     "                    if iou > 0.5:\n",
-    "                        if result.conf[i].item() > result.conf[j].item():\n",
+    "                        if result.conf[l].item() > result.conf[j].item():\n",
     "                            digits_to_discard.append(j)\n",
     "                        else:\n",
-    "                            digits_to_discard.append(i)\n",
+    "                            digits_to_discard.append(l)\n",
     "                        \n",
     "            for j in range(len(result.cls)):\n",
     "                if j not in digits_to_discard:\n",
@@ -188,7 +188,6 @@
     "            if predicted_number != \"\":\n",
     "                detected_numbers.append(predicted_number)\n",
     "                boxes.append(bboxes[i])\n",
-    "\n",
     "            \n",
     "            \"\"\"numbers = []\n",
     "            coords = []\n",
@@ -229,7 +228,7 @@
     "    def match_box(self, box, number):\n",
     "        if len(self.numbers) != 0:\n",
     "            for key in self.numbers:\n",
-    "                if calculate_iou(box, key[1]) >0.5:\n",
+    "                if calculate_iou(box, key[1]) >0.2:\n",
     "                    key[0] = self.ttl\n",
     "                    key[1] = box\n",
     "                    if number in key[2]:\n",
@@ -245,6 +244,13 @@
     "        else:\n",
     "            self.numbers.append([self.ttl, box,{number[0:3]:1}])\n",
     "        return \n",
+    "\n",
+    "    def remove_boxes(self):\n",
+    "        print(len(self.numbers))\n",
+    "        self.numbers = [[item[0]-1, item[1], item[2]] for item in self.numbers if item[0]-1 >0]\n",
+    "        print(len(self.numbers))\n",
+    "            \n",
+    "        \n",
     "                \n",
     "        \n",
     "    def predict_image(self,image):\n",
@@ -304,7 +310,6 @@
     "                final_numbers.append(max(i[2], key=i[2].get))\n",
     "            names = self.search_names(final_numbers)\n",
     "            annotated_image = self.annotate_image(frame, final_boxes, final_numbers)\n",
-    "\n",
     "            \n",
     "            # font which we will be using to display FPS \n",
     "            font = cv2.FONT_HERSHEY_SIMPLEX \n",
@@ -330,6 +335,7 @@
     "            cv2.putText(annotated_image, fps, (7, 70), font, 3, (100, 255, 0), 3, cv2.LINE_AA) \n",
     "            \"\"\"plt.imshow(cv2.cvtColor(annotated_image, cv2.COLOR_BGR2RGB))\n",
     "            plt.show()\"\"\"\n",
+    "            self.remove_boxes()\n",
     "            framenr+=1\n",
     "            print(framenr)\n",
     "            \"\"\"if framenr >10:\n",
@@ -362,74 +368,567 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "6\n",
+      "6\n",
       "1\n",
+      "6\n",
+      "6\n",
       "2\n",
+      "6\n",
+      "6\n",
       "3\n",
+      "6\n",
+      "6\n",
       "4\n",
+      "6\n",
+      "6\n",
       "5\n",
       "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
       "7\n",
+      "6\n",
+      "6\n",
       "8\n",
+      "6\n",
+      "6\n",
       "9\n",
+      "6\n",
+      "6\n",
       "10\n",
+      "6\n",
+      "6\n",
       "11\n",
+      "6\n",
+      "6\n",
       "12\n",
+      "6\n",
+      "6\n",
       "13\n",
+      "6\n",
+      "6\n",
       "14\n",
+      "6\n",
+      "6\n",
       "15\n",
+      "6\n",
+      "6\n",
       "16\n",
+      "6\n",
+      "6\n",
       "17\n",
+      "6\n",
+      "6\n",
       "18\n",
+      "6\n",
+      "6\n",
       "19\n",
+      "6\n",
+      "6\n",
       "20\n",
+      "6\n",
+      "6\n",
       "21\n",
+      "6\n",
+      "6\n",
       "22\n",
+      "6\n",
+      "6\n",
       "23\n",
+      "6\n",
+      "6\n",
       "24\n",
+      "6\n",
+      "6\n",
       "25\n",
+      "6\n",
+      "6\n",
       "26\n",
+      "6\n",
+      "6\n",
       "27\n",
+      "6\n",
+      "6\n",
       "28\n",
+      "6\n",
+      "6\n",
       "29\n",
+      "6\n",
+      "6\n",
       "30\n",
+      "6\n",
+      "5\n",
       "31\n",
+      "5\n",
+      "5\n",
       "32\n",
+      "6\n",
+      "6\n",
       "33\n",
+      "6\n",
+      "6\n",
       "34\n",
+      "6\n",
+      "6\n",
       "35\n",
+      "6\n",
+      "6\n",
       "36\n",
+      "6\n",
+      "6\n",
       "37\n",
+      "6\n",
+      "6\n",
       "38\n",
+      "6\n",
+      "6\n",
       "39\n",
+      "6\n",
+      "6\n",
       "40\n",
+      "6\n",
+      "6\n",
       "41\n",
+      "6\n",
+      "6\n",
       "42\n",
+      "6\n",
+      "6\n",
       "43\n",
+      "6\n",
+      "6\n",
       "44\n",
+      "6\n",
+      "2\n",
       "45\n",
+      "3\n",
+      "3\n",
       "46\n",
+      "3\n",
+      "3\n",
       "47\n",
+      "5\n",
+      "5\n",
       "48\n",
+      "6\n",
+      "6\n",
       "49\n",
+      "6\n",
+      "6\n",
       "50\n",
+      "6\n",
+      "6\n",
       "51\n",
+      "6\n",
+      "6\n",
       "52\n",
+      "6\n",
+      "6\n",
       "53\n",
+      "6\n",
+      "6\n",
       "54\n",
+      "6\n",
+      "6\n",
       "55\n",
+      "6\n",
+      "6\n",
       "56\n",
+      "6\n",
+      "6\n",
       "57\n",
+      "6\n",
+      "6\n",
       "58\n",
+      "6\n",
+      "6\n",
       "59\n",
+      "6\n",
+      "6\n",
       "60\n",
+      "6\n",
+      "6\n",
       "61\n",
+      "6\n",
+      "5\n",
       "62\n",
+      "5\n",
+      "3\n",
       "63\n",
+      "5\n",
+      "5\n",
       "64\n",
+      "5\n",
+      "5\n",
       "65\n",
+      "5\n",
+      "5\n",
       "66\n",
+      "5\n",
+      "5\n",
       "67\n",
-      "68\n"
+      "6\n",
+      "6\n",
+      "68\n",
+      "6\n",
+      "6\n",
+      "69\n",
+      "6\n",
+      "6\n",
+      "70\n",
+      "6\n",
+      "5\n",
+      "71\n",
+      "5\n",
+      "5\n",
+      "72\n",
+      "5\n",
+      "5\n",
+      "73\n",
+      "5\n",
+      "5\n",
+      "74\n",
+      "5\n",
+      "5\n",
+      "75\n",
+      "5\n",
+      "5\n",
+      "76\n",
+      "5\n",
+      "4\n",
+      "77\n",
+      "4\n",
+      "1\n",
+      "78\n",
+      "3\n",
+      "2\n",
+      "79\n",
+      "5\n",
+      "5\n",
+      "80\n",
+      "5\n",
+      "5\n",
+      "81\n",
+      "6\n",
+      "5\n",
+      "82\n",
+      "5\n",
+      "5\n",
+      "83\n",
+      "5\n",
+      "5\n",
+      "84\n",
+      "5\n",
+      "5\n",
+      "85\n",
+      "5\n",
+      "5\n",
+      "86\n",
+      "5\n",
+      "5\n",
+      "87\n",
+      "6\n",
+      "6\n",
+      "88\n",
+      "6\n",
+      "6\n",
+      "89\n",
+      "6\n",
+      "6\n",
+      "90\n",
+      "6\n",
+      "6\n",
+      "91\n",
+      "6\n",
+      "6\n",
+      "92\n",
+      "6\n",
+      "4\n",
+      "93\n",
+      "4\n",
+      "2\n",
+      "94\n",
+      "2\n",
+      "1\n",
+      "95\n",
+      "2\n",
+      "2\n",
+      "96\n",
+      "4\n",
+      "4\n",
+      "97\n",
+      "5\n",
+      "5\n",
+      "98\n",
+      "6\n",
+      "6\n",
+      "99\n",
+      "6\n",
+      "6\n",
+      "100\n",
+      "6\n",
+      "6\n",
+      "101\n",
+      "6\n",
+      "5\n",
+      "102\n",
+      "6\n",
+      "2\n",
+      "103\n",
+      "4\n",
+      "3\n",
+      "104\n",
+      "4\n",
+      "4\n",
+      "105\n",
+      "4\n",
+      "3\n",
+      "106\n",
+      "3\n",
+      "2\n",
+      "107\n",
+      "3\n",
+      "2\n",
+      "108\n",
+      "3\n",
+      "3\n",
+      "109\n",
+      "4\n",
+      "4\n",
+      "110\n",
+      "4\n",
+      "4\n",
+      "111\n",
+      "5\n",
+      "3\n",
+      "112\n",
+      "4\n",
+      "4\n",
+      "113\n",
+      "4\n",
+      "4\n",
+      "114\n",
+      "4\n",
+      "4\n",
+      "115\n",
+      "4\n",
+      "4\n",
+      "116\n",
+      "5\n",
+      "5\n",
+      "117\n",
+      "6\n",
+      "6\n",
+      "118\n",
+      "6\n",
+      "6\n",
+      "119\n",
+      "6\n",
+      "4\n",
+      "120\n",
+      "10\n",
+      "6\n",
+      "121\n",
+      "6\n",
+      "6\n",
+      "122\n",
+      "6\n",
+      "6\n",
+      "123\n",
+      "6\n",
+      "6\n",
+      "124\n",
+      "6\n",
+      "6\n",
+      "125\n",
+      "6\n",
+      "6\n",
+      "126\n",
+      "6\n",
+      "6\n",
+      "127\n",
+      "6\n",
+      "6\n",
+      "128\n",
+      "6\n",
+      "6\n",
+      "129\n",
+      "6\n",
+      "6\n",
+      "130\n",
+      "6\n",
+      "3\n",
+      "131\n",
+      "7\n",
+      "6\n",
+      "132\n",
+      "6\n",
+      "6\n",
+      "133\n",
+      "6\n",
+      "6\n",
+      "134\n",
+      "6\n",
+      "6\n",
+      "135\n",
+      "6\n",
+      "5\n",
+      "136\n",
+      "5\n",
+      "5\n",
+      "137\n",
+      "5\n",
+      "5\n",
+      "138\n",
+      "6\n",
+      "6\n",
+      "139\n",
+      "6\n",
+      "6\n",
+      "140\n",
+      "6\n",
+      "5\n",
+      "141\n",
+      "5\n",
+      "5\n",
+      "142\n",
+      "6\n",
+      "6\n",
+      "143\n",
+      "6\n",
+      "6\n",
+      "144\n",
+      "6\n",
+      "6\n",
+      "145\n",
+      "6\n",
+      "6\n",
+      "146\n",
+      "6\n",
+      "6\n",
+      "147\n",
+      "6\n",
+      "6\n",
+      "148\n",
+      "6\n",
+      "6\n",
+      "149\n",
+      "6\n",
+      "6\n",
+      "150\n",
+      "6\n",
+      "6\n",
+      "151\n",
+      "6\n",
+      "6\n",
+      "152\n",
+      "6\n",
+      "6\n",
+      "153\n",
+      "6\n",
+      "5\n",
+      "154\n",
+      "5\n",
+      "5\n",
+      "155\n",
+      "5\n",
+      "5\n",
+      "156\n",
+      "5\n",
+      "5\n",
+      "157\n",
+      "5\n",
+      "5\n",
+      "158\n",
+      "5\n",
+      "5\n",
+      "159\n",
+      "5\n",
+      "5\n",
+      "160\n",
+      "5\n",
+      "5\n",
+      "161\n",
+      "5\n",
+      "5\n",
+      "162\n",
+      "5\n",
+      "5\n",
+      "163\n",
+      "5\n",
+      "5\n",
+      "164\n",
+      "5\n",
+      "5\n",
+      "165\n",
+      "5\n",
+      "5\n",
+      "166\n",
+      "5\n",
+      "5\n",
+      "167\n",
+      "5\n",
+      "5\n",
+      "168\n",
+      "8\n",
+      "4\n",
+      "169\n",
+      "5\n",
+      "4\n",
+      "170\n",
+      "4\n",
+      "4\n",
+      "171\n",
+      "4\n",
+      "4\n",
+      "172\n",
+      "4\n",
+      "4\n",
+      "173\n",
+      "4\n",
+      "4\n",
+      "174\n",
+      "5\n",
+      "5\n",
+      "175\n",
+      "5\n",
+      "5\n",
+      "176\n",
+      "5\n",
+      "5\n",
+      "177\n",
+      "5\n",
+      "4\n",
+      "178\n",
+      "5\n",
+      "5\n",
+      "179\n",
+      "5\n",
+      "5\n",
+      "180\n",
+      "5\n",
+      "5\n",
+      "181\n",
+      "5\n",
+      "5\n",
+      "182\n",
+      "5\n",
+      "5\n",
+      "183\n",
+      "5\n",
+      "5\n",
+      "184\n",
+      "5\n",
+      "5\n",
+      "185\n",
+      "5\n",
+      "5\n",
+      "186\n",
+      "5\n",
+      "4\n",
+      "187\n"
      ]
     }
    ],
